--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
 	},
 	"main": "index.js",
 	"name": "bayrell-lang-compiler",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"dependencies": {
-		"bayrell-lang-nodejs": "^0.7.2",
-		"bayrell-parser-nodejs": "^0.7.2",
+		"bayrell-lang-nodejs": "^0.7.2-1",
+		"bayrell-parser-nodejs": "^0.7.2-1",
 		"bayrell-common-nodejs": "^0.7.0",
-		"bayrell-runtime-nodejs": "^0.7.2",
+		"bayrell-runtime-nodejs": "^0.7.2-1",
 		"node-watch": "^0.6.2",
 		"shelljs": "^0.7.0"
 	}
