--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
 		"*.js"
 	],
 	"bin": {
-		"bayrell-lang-nodejs": "./cli.js"
+		"bayrell-lang-compiler": "./cli.js"
 	},
 	"main": "index.js",
 	"name": "bayrell-lang-compiler",
-	"version": "0.1.4",
+	"version": "0.7.3",
 	"dependencies": {
-		"bayrell-lang-nodejs": "^0.7.2-1",
-		"bayrell-parser-nodejs": "^0.7.2-1",
-		"bayrell-common-nodejs": "^0.7.0",
-		"bayrell-runtime-nodejs": "^0.7.2-1",
+		"bayrell-lang-nodejs": "^0.7.3",
+		"bayrell-runtime-nodejs": "^0.7.3",
 		"node-watch": "^0.6.2",
 		"shelljs": "^0.7.0"
 	}
