--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 	},
 	"main": "index.js",
 	"name": "bayrell-lang-compiler",
-	"version": "0.7.3",
+	"version": "0.8.0-alpha.9",
 	"dependencies": {
-		"bayrell-lang-nodejs": "^0.7.3",
-		"bayrell-runtime-nodejs": "^0.7.3",
+		"bayrell": "^0.8.3",
+		"bayrell-lang-nodejs": "^0.8.0-alpha.9",
+		"bayrell-runtime-nodejs": "^0.8.0-alpha.9",
 		"node-watch": "^0.6.2",
 		"shelljs": "^0.7.0"
 	}
