--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
 	},
 	"main": "index.js",
 	"name": "bayrell-lang-compiler",
-	"version": "0.9.1",
+	"version": "0.10.0",
 	"dependencies": {
-		"bayrell": "^0.8.3",
-		"bayrell-lang-nodejs": "~0.9.0",
-		"bayrell-runtime-nodejs": "~0.9.0",
+		"bayrell": "0.10.0",
+		"bayrell-bundler-nodejs": "0.10.0",
+		"bayrell-lang-nodejs": "0.10.0",
+		"bayrell-runtime-core-nodejs": "0.10.0",
+		"bayrell-runtime-nodejs": "0.10.0",
+		"bayrell-runtime-task-nodejs": "0.10.0",
 		"node-watch": "^0.6.2",
+		"path": "^0.12.7",
 		"shelljs": "^0.7.0"
 	}
 }
