--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
 	},
 	"main": "index.js",
 	"name": "bayrell-lang-compiler",
-	"version": "0.10.0",
+	"version": "0.10.1",
 	"dependencies": {
-		"bayrell": "0.10.0",
-		"bayrell-bundler-nodejs": "0.10.0",
-		"bayrell-lang-nodejs": "0.10.0",
-		"bayrell-runtime-core-nodejs": "0.10.0",
-		"bayrell-runtime-nodejs": "0.10.0",
-		"bayrell-runtime-task-nodejs": "0.10.0",
+		"bayrell": "^0.10.0",
+		"bayrell-bundler-nodejs": "^0.10.1",
+		"bayrell-lang-nodejs": "^0.10.0",
+		"bayrell-runtime-core-nodejs": "^0.10.0",
+		"bayrell-runtime-nodejs": "^0.10.0",
+		"bayrell-runtime-task-nodejs": "^0.10.0",
 		"node-watch": "^0.6.2",
 		"path": "^0.12.7",
 		"shelljs": "^0.7.0"
